force-app/main/default/objects/Contract_Performance_Team__c/Contract_Performance_Team__c.object-meta.xml
<CustomObject>
    <description>List of emails , that receive Breach notification</description>
    <label>Contract Performance Team</label>
    <nameField>
        <displayFormat>CPT-{00000}</displayFormat>
        <label>Contract Performance Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Performance Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>