force-app/main/default/objects/Contract_Performance_Team__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact on Breach</fullName>
                <default>true</default>
                <label>Contact on Breach</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>